fix orientation on tablet

--- a/wp-content/litespeed/css/styles.css
+++ b/wp-content/litespeed/css/styles.css
@@ -237,6 +237,13 @@ th, td {
     background-color: #1a1a1a;
 }
 
+@media screen and (min-width: 500px) and (max-width: 768px) {
+    /* Correct ad positioning on tablet */
+    .sylvester-top, .sylvester-top-mobile {
+        margin-top: 10rem !important;
+    }
+}
+
 .sylvester-top-mobile {
     display: none;
 }
